WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
118506
Region based columns not painted correctly in non-default writing-modes
https://bugs.webkit.org/show_bug.cgi?id=118506
Summary
Region based columns not painted correctly in non-default writing-modes
Morten Stenshorne
Reported
2013-07-09 07:07:22 PDT
There are problems if -webkit-writing-mode is vertical-rl, vertical-lr or horizontal-bt.
Attachments
Test case
(1.46 KB, text/html)
2013-07-09 07:36 PDT
,
Morten Stenshorne
no flags
Details
Patch
(16.30 KB, patch)
2013-07-15 04:04 PDT
,
Morten Stenshorne
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Morten Stenshorne
Comment 1
2013-07-09 07:36:01 PDT
Created
attachment 206320
[details]
Test case
Morten Stenshorne
Comment 2
2013-07-15 04:04:04 PDT
Created
attachment 206655
[details]
Patch
Dave Hyatt
Comment 3
2013-08-05 13:54:35 PDT
Comment on
attachment 206655
[details]
Patch r=me
WebKit Commit Bot
Comment 4
2013-08-05 14:19:10 PDT
Comment on
attachment 206655
[details]
Patch Clearing flags on attachment: 206655 Committed
r153723
: <
http://trac.webkit.org/changeset/153723
>
WebKit Commit Bot
Comment 5
2013-08-05 14:19:12 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug