Region based columns not painted correctly in non-default writing-modes https://bugs.webkit.org/show_bug.cgi?id=118506

Patch by Morten Stenshorne <mstensho@opera.com> on 2013-08-05
Reviewed by David Hyatt.

Source/WebCore:

The column translation offset was calculated incorrectly.
The dirty rect intersection check was also wrong.

Added some documentation, to make it clear what's going on.

Tests: fast/multicol/newmulticol/hide-box-horizontal-bt.html
       fast/multicol/newmulticol/hide-box-vertical-lr.html
       fast/multicol/newmulticol/hide-box-vertical-rl.html

* rendering/RenderMultiColumnSet.cpp:
(WebCore::RenderMultiColumnSet::collectLayerFragments):

LayoutTests:

* fast/multicol/newmulticol/hide-box-horizontal-bt-expected.html: Added.
* fast/multicol/newmulticol/hide-box-horizontal-bt.html: Added.
* fast/multicol/newmulticol/hide-box-vertical-lr-expected.html: Added.
* fast/multicol/newmulticol/hide-box-vertical-lr.html: Added.
* fast/multicol/newmulticol/hide-box-vertical-rl-expected.html: Added.
* fast/multicol/newmulticol/hide-box-vertical-rl.html: Added.

Canonical link: https://commits.webkit.org/137442@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@153723 268f45cc-cd09-0410-ab3c-d52691b4dbfc